--- a/core.service/build.gradle
+++ b/core.service/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 	
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.10.2'
 	compile 'com.google.code.findbugs:jsr305:3.0.2'
+	compile 'com.squareup.okhttp3:okhttp:4.3.1'
     compile 'org.springframework.boot:spring-boot-starter-actuator:2.2.4.RELEASE'
 	compile 'org.starchartlabs.alloy:alloy-core:0.5.0'
 
